Bug 1066703: Mark GetUserMediaCallbackMediaStreamListener::mMediaThread as permissably-unused in --disable-webrtc builds. r=jimm